--- a/package.json
+++ b/package.json
@@ -1,59 +1,26 @@
 {
-  "name": "creep-cube",
+  "name": "rubiks-cube",
   "private": true,
-  "description": "一个使用 Three.js 实现的魔方小游戏",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "jsdelivr": "dist/index.umd.js",
-  "types": "types/index.d.ts",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "rollup --config rollup.config.dev.js -w",
-    "build": "rollup --config rollup.config.build.js"
-  },
-  "homepage": "https://github.com/buuing/creep-cube",
-  "bugs": "https://github.com/buuing/creep-cube/issues",
-  "repository": "git+https://github.com/buuing/creep-cube.git",
-  "author": "ldq <ldq404@qq.com>",
-  "files": [
-    "dist",
-    "types"
-  ],
-  "keywords": [
-    "Threejs魔方"
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/runtime": "^7.16.3",
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "@rollup/plugin-typescript": "^6.1.0",
-    "@types/animejs": "^3.1.4",
-    "@types/three": "^0.137.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "core-js": "^3.19.2",
-    "eslint": "^7.18.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
-    "rollup": "^2.33.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^3.0.2",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "tslib": "^2.3.1",
-    "tweakpane": "^3.0.7",
-    "typescript": "^4.0.5"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
-    "three": "^0.135.0"
+    "animejs": "^3.2.2",
+    "three": "^0.172.0",
+    "tweakpane": "^4.0.5",
+    "vue": "^3.3.4"
+  },
+  "devDependencies": {
+    "@types/animejs": "^3.1.12",
+    "@types/three": "^0.172.0",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/tsconfig": "^0.4.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.9",
+    "vue-tsc": "^1.8.8"
   }
 }
