--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tweakpane/core": "^2.0.5",
     "animejs": "^3.2.2",
     "three": "^0.172.0",
     "tweakpane": "^4.0.5",
