--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5", // 编译后的es版本
+    "target": "ES2022", // 编译后的es版本
     "module": "esnext", // 前端模块化规范
     "allowJs": true, // 允许引入js文件
     "strict": true, // 开启严格模式
